fix: Refactorizaciones para conexion con microservicios, y arreglos en swagger