@@ -1,12 +1,12 @@
 package edu.dosw.application;
 
+import edu.dosw.application.exceptions.ApplicationLayerExceptions;
 import edu.dosw.domain.model.ConversationMessage;
 import edu.dosw.domain.ports.inbound.FilterMessagesUseCase;
 import edu.dosw.domain.ports.outbound.ConversationRepository;
+import edu.dosw.infrastructure.persistence.mongodb.exceptions.MongoPersistenceExceptions;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class FilterMessagesUseCaseImpl implements FilterMessagesUseCase {
@@ -19,10 +19,15 @@ public class FilterMessagesUseCaseImpl implements FilterMessagesUseCase {
 
     @Override
     public List<ConversationMessage> execute(String conversationId, String filterWord) {
-        return conversationRepository.findConversationById(conversationId)
-                .getMessages()
-                .stream()
-                .filter(c -> c.getText().contains(filterWord))
-                .collect(Collectors.toList());
+        try {
+            return conversationRepository.findConversationById(conversationId)
+                    .getMessages()
+                    .stream()
+                    .filter(c -> c.getText().contains(filterWord))
+                    .toList();
+
+        } catch (MongoPersistenceExceptions e) {
+            throw ApplicationLayerExceptions.conversationNotFound();
+        }
     }
 }
